--- a/dtds.data/index.html
+++ b/dtds.data/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Apache Wicket - Meet Apache Wicket</title>
+    <title>Apache Wicket - Apache Wicket DTDs</title>
 
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
 
@@ -137,8 +137,12 @@
 </div>
 
 		<div id="contentbody">
-			<h1>Meet Apache Wicket</h1>
-			
+			<h1>Apache Wicket DTDs</h1>
+			<ul>
+<li><a href='wicket-xhtml1.3-strict.dtd'>Wicket 1.3 DTD</a></li>
+
+<li><a href='wicket-xhtml1.4-strict.dtd'>Wicket 1.4 DTD</a></li>
+</ul>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
