--- a/learn/projects/extensions.html
+++ b/learn/projects/extensions.html
@@ -51,6 +51,9 @@
 		<li>
 			<a href="http://www.jweekend.com/dev/LegUp" rel="nofollow">More archetypes</a>
 		</li>
+		<li>
+			<a href="/help" title="Get help">Get help</a>
+		</li>
 	</ul>
 	<h5>
 		<a name="Navigation-Documentation" id="Navigation-Documentation"></a>Learn
@@ -105,13 +108,16 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/help/reportabug.html">Report a bug</a>
+			<a href="/contribute/write.html" title="Writing documentation">Writing docs</a>
 		</li>
 		<li>
-			<a href="/contribute/writing-documentation.html" title="Writing documentation">Writing docs</a>
+			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/building-from-svn.html" title="Building from SVN">Source</a>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
+		</li>
+		<li>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -138,7 +144,7 @@
 
 		<div id="contentbody">
 			<h1>Wicket Extensions</h1>
-			
+			<p>Waiting for someone to contribute some introductory documentation about this project. See for an example the <a href='velocity.html'>Velocity project description</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
