--- a/learn/projects/index.html
+++ b/learn/projects/index.html
@@ -51,6 +51,9 @@
 		<li>
 			<a href="http://www.jweekend.com/dev/LegUp" rel="nofollow">More archetypes</a>
 		</li>
+		<li>
+			<a href="/help" title="Get help">Get help</a>
+		</li>
 	</ul>
 	<h5>
 		<a name="Navigation-Documentation" id="Navigation-Documentation"></a>Learn
@@ -105,13 +108,16 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/help/reportabug.html">Report a bug</a>
+			<a href="/contribute/write.html" title="Writing documentation">Writing docs</a>
 		</li>
 		<li>
-			<a href="/contribute/writing-documentation.html" title="Writing documentation">Writing docs</a>
+			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/building-from-svn.html" title="Building from SVN">Source</a>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
+		</li>
+		<li>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -141,7 +147,7 @@
 			<p>The Wicket team provides more than a component oriented web framework, we also provide additional projects that help you integrate with Java technologies such as Spring, Guice and Velocity. Check each project below to see if you can use it.</p>
 
 <ul>
-<li><a href='authoroles.html'>Wicket Auth/Roles</a> - very basic security project enabling annotation based authorization for two roles: user and admin.</li>
+<li><a href='authroles.html'>Wicket Auth/Roles</a> - very basic security project enabling annotation based authorization for two roles: user and admin.</li>
 
 <li><a href='datetime.html'>Wicket Date/Time</a> -</li>
 
