--- a/contribute/index.html
+++ b/contribute/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Apache Wicket - Wicket IoC</title>
+    <title>Apache Wicket - Contribute</title>
 
 	<link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen" />
 
@@ -114,10 +114,10 @@
 			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -143,8 +143,8 @@
 </div>
 
 		<div id="contentbody">
-			<h1>Wicket IoC</h1>
-			<p>Waiting for someone to contribute some introductory documentation about this project. See for an example the <a href='velocity.html'>Velocity project description</a>.</p>
+			<h1>Contribute</h1>
+			<p>TODO</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
