--- a/help/email.html
+++ b/help/email.html
@@ -51,6 +51,9 @@
 		<li>
 			<a href="http://www.jweekend.com/dev/LegUp" rel="nofollow">More archetypes</a>
 		</li>
+		<li>
+			<a href="/help" title="Get help">Get help</a>
+		</li>
 	</ul>
 	<h5>
 		<a name="Navigation-Documentation" id="Navigation-Documentation"></a>Learn
@@ -105,13 +108,16 @@
 	</h5>
 	<ul>
 		<li>
-			<a href="/help/reportabug.html">Report a bug</a>
+			<a href="/contribute/write.html" title="Writing documentation">Writing docs</a>
 		</li>
 		<li>
-			<a href="/contribute/writing-documentation.html" title="Writing documentation">Writing docs</a>
+			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/building-from-svn.html" title="Building from SVN">Source</a>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
+		</li>
+		<li>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -138,7 +144,58 @@
 
 		<div id="contentbody">
 			<h1>Get help via email</h1>
-			
+			<p>We run three main mailing lists:</p>
+
+<ul>
+<li>The <strong>announcements</strong> mailing list for announcing new releases and other important Wicket news.</li>
+
+<li>The <strong>users</strong> mailing list for developers working with Wicket&emdash;that would be if you&#8217;re using Wicket or are interested in using it</li>
+
+<li>The <strong>dev</strong> mailing list for talking about development of Wicket itself. If you doubt that your message belongs on this list, use the <strong>users</strong> list.</li>
+</ul>
+
+<h2 id='subscribing_and_unsubscribing'>Subscribing and unsubscribing</h2>
+<table>
+	<tr>
+		<td>Announcements list</td>
+		<td>Low traffic</td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-announce/'>Archives</a></td>
+		<td><a href=''>Search</a></td>
+		<td><a href='mailto:announce-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket announcements list'>Subscribe</a></td>
+		<td><a href='mailto:announce-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket announcements list'>Unsubscribe</a></td>
+		<td><a href='mailto:announce-help@wicket.apache.org?subject=Get help for Apache Wicket announcements list'>Help</a></td>
+	</tr>
+	<tr>
+		<td>Users list</td>
+		<td>High traffic</td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-users/'>Archives</a></td>
+		<td><a href=''>Search</a></td>
+		<td><a href='mailto:users-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket users list'>Subscribe</a></td>
+		<td><a href='mailto:users-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket users list'>Unsubscribe</a></td>
+		<td><a href='mailto:users-help@wicket.apache.org?subject=Get help for Apache Wicket users list'>Help</a></td>
+	</tr>
+	<tr>
+		<td>Wicket development list</td>
+		<td>Medium traffic</td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-dev/'>archives</a></td>
+		<td><a href=''>search</a></td>
+		<td><a href='mailto:dev-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket development list'>Subscribe</a></td>
+		<td><a href='mailto:dev-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket development list'>Unsubscribe</a></td>
+		<td><a href='mailto:dev-help@wicket.apache.org?subject=Help for Apache Wicket development list'>Help</a></td>
+	</tr>
+	<tr>
+		<td>Commits list</td>
+		<td>High traffic</td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-commits/'>archives</a></td>
+		<td><a href=''>search</a></td>
+		<td><a href='mailto:commits-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket commits list'>Subscribe</a></td>
+		<td><a href='mailto:commits-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket commits list'>Unsubscribe</a></td>
+		<td><a href='mailto:commits-help@wicket.apache.org?subject=Help for Apache Wicket commits list'>Help</a></td>
+	</tr>
+</table>
+<h2 id='report_a_security_issue'>Report a security issue</h2>
+
+<p>There’s also a commits mailing list for following SVN commits and JIRA issues. If you have a security issue to report, contact the <a href='mailto:private@wicket.apache.org?Security'>Wicket PMC</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
