Added more docs, fixed warnings during generation
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@979236 13f79535-47bb-0310-9956-ffa450edef68

--- a/help/email.html
+++ b/help/email.html
@@ -114,10 +114,10 @@
 			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
 		</li>
 		<li>
-			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -160,7 +160,7 @@
 		<td>Announcements list</td>
 		<td>Low traffic</td>
 		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-announce/'>Archives</a></td>
-		<td><a href=''>Search</a></td>
+		<td><a href='http://wicket-announce.markmail.org/'>Search</a></td>
 		<td><a href='mailto:announce-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket announcements list'>Subscribe</a></td>
 		<td><a href='mailto:announce-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket announcements list'>Unsubscribe</a></td>
 		<td><a href='mailto:announce-help@wicket.apache.org?subject=Get help for Apache Wicket announcements list'>Help</a></td>
@@ -169,7 +169,7 @@
 		<td>Users list</td>
 		<td>High traffic</td>
 		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-users/'>Archives</a></td>
-		<td><a href=''>Search</a></td>
+		<td><a href='http://wicket-users.markmail.org/'>Search</a></td>
 		<td><a href='mailto:users-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket users list'>Subscribe</a></td>
 		<td><a href='mailto:users-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket users list'>Unsubscribe</a></td>
 		<td><a href='mailto:users-help@wicket.apache.org?subject=Get help for Apache Wicket users list'>Help</a></td>
@@ -177,8 +177,8 @@
 	<tr>
 		<td>Wicket development list</td>
 		<td>Medium traffic</td>
-		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-dev/'>archives</a></td>
-		<td><a href=''>search</a></td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-dev/'>Archives</a></td>
+		<td><a href='http://wicket-dev.markmail.org/'>Search</a></td>
 		<td><a href='mailto:dev-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket development list'>Subscribe</a></td>
 		<td><a href='mailto:dev-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket development list'>Unsubscribe</a></td>
 		<td><a href='mailto:dev-help@wicket.apache.org?subject=Help for Apache Wicket development list'>Help</a></td>
@@ -186,8 +186,8 @@
 	<tr>
 		<td>Commits list</td>
 		<td>High traffic</td>
-		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-commits/'>archives</a></td>
-		<td><a href=''>search</a></td>
+		<td><a href='http://mail-archives.apache.org/mod_mbox/wicket-commits/'>Archives</a></td>
+		<td><a href='http://wicket-commits.markmail.org/'>Search</a></td>
 		<td><a href='mailto:commits-subscribe@wicket.apache.org?subject=Subscribe to Apache Wicket commits list'>Subscribe</a></td>
 		<td><a href='mailto:commits-unsubscribe@wicket.apache.org?subject=Unsubscribe from Apache Wicket commits list'>Unsubscribe</a></td>
 		<td><a href='mailto:commits-help@wicket.apache.org?subject=Help for Apache Wicket commits list'>Help</a></td>
