--- a/help/reportabug.html
+++ b/help/reportabug.html
@@ -114,10 +114,10 @@
 			<a href="/contribute/build.html" title="Building from SVN">Build Wicket</a>
 		</li>
 		<li>
-			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
+			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
 		</li>
 		<li>
-			<a href="/contribute/patch.html" title="Provide a patch">Provide a patch</a>
+			<a href="/contribute/release.html" title="Release Wicket">Release Wicket</a>
 		</li>
 		<li>
 			<a href="http://fisheye6.atlassian.com/browse/wicket" title="SVN Overview" class="external-link" rel="nofollow">Fisheye</a>
@@ -190,7 +190,7 @@
 <li>Submitting your fix as a Subversion patch file.</li>
 </ul>
 
-<p>This guide will outline how to do it with Eclipse + Subclipse + m2eclipse. If you prefer the command line, then start here: <span>http://wicket.apache.org/building-from-svn.html</span> If you can provide a walk through for your IDE of choice then please do add it.</p>
+<p>This guide will outline how to do it with Eclipse + Subclipse + m2eclipse. If you prefer the command line, then start here: <a href='/contribute/build.html'>building from source</a> If you can provide a walk through for your IDE of choice then please do add it.</p>
 
 <h3 id='setting_up'>Setting up</h3>
 
