--- a/meet/buzz.html
+++ b/meet/buzz.html
@@ -171,7 +171,7 @@
 </blockquote>
 
 <blockquote>
-<p>&#8220;So is Wicket the one true MVC framework that a lot of us have been hunting for? At the moment, I tend to think so. <span>&#8230;</span> If you like Java you will really like Wicket.&#8221;</p>
+<p>&#8220;So is Wicket the one true MVC framework that a lot of us have been hunting for? At the moment, I tend to think so. [&#8230;] If you like Java you will really like Wicket.&#8221;</p>
 
 <p><a href='http://ptrthomas.wordpress.com/2007/03/02/wicket-impressions-moving-from-spring-mvc-webflow/'>Peter Thomas</a></p>
 </blockquote>
