--- a/start/download.html
+++ b/start/download.html
@@ -158,7 +158,7 @@
 <li><strong>Archived releases</strong>: <a href='http://archive.apache.org/dist/wicket'>http://archive.apache.org/dist/wicket</a></li>
 </ul>
 
-<p>We recommend you <a href='quickstart.html'>start</a> with our latest 1.4 release. If you are migrating an existing application from Wicket 1.3 to 1.4, you may find the <span>migration guide|http://cwiki.apache.org/WICKET/migrate-14.html</span> invaluable.</p>
+<p>We recommend you <a href='quickstart.html'>start</a> with our latest 1.4 release. If you are migrating an existing application from Wicket 1.3 to 1.4, you may find the <a href='http://cwiki.apache.org/WICKET/migrate-14.html'>migration guide</a> invaluable.</p>
 
 <p><strong>Apache Wicket 1.4.x lines require JDK 1.5 or newer</strong></p>
 
