Fixed minor stuff in the help file
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@979238 13f79535-47bb-0310-9956-ffa450edef68

--- a/help/index.html
+++ b/help/index.html
@@ -154,12 +154,12 @@
 
 <h2 id='support_from_the_apache_wicket_open_source_project'>Support From the Apache Wicket Open Source Project</h2>
 
-<p>If you are experiencing problems using Wicket please report your problem via the Issue Tracker. You may also find it useful to discuss your issues with the community on the Discussion Forums or join one of the Mailing Lists. Below are some resources to check before asking for help:</p>
+<p>If you are experiencing problems using Wicket please report your problem via the Issue Tracker. You may also find it useful to discuss your issues with the community on one of the Mailing Lists. Below are some resources to check before asking for help:</p>
 
 <ul>
-<li><a href='https://issues.apache.org/jira/browse/WICKET'>Issue Tracker</a></li>
-
 <li><a href='email.html'>Mailing Lists</a></li>
+
+<li><a href='https://issues.apache.org/jira/browse/WICKET'>Issue Tracker</a></li>
 
 <li><a href='irc://irc.freenode.net/%23%23wicket'>IRC</a></li>
 </ul>
@@ -175,7 +175,7 @@
 
 <li>what platform and JDK</li>
 
-<li>any particular container being used - if so what version</li>
+<li>any particular JEE container being used - if so what version</li>
 
 <li>stack traces generally really help! If in doubt include the whole thing; often exceptions get wrapped in other exceptions and the exception right near the bottom explains the actual error, not the first few lines at the top. Its very easy for us to skim-read past unnecessary parts of a stack trace.</li>
 
