--- a/learn/examples/index.html
+++ b/learn/examples/index.html
@@ -146,7 +146,7 @@
 			<h1>A Quick Tour of Wicket</h1>
 			<p>Nothing says more about a development technology than a few simple examples. After all, how hard should it be to do something easy? The examples below should speak for themselves in demonstrating how easy it is to get things done in Wicket when compared to other frameworks. You will discover that Wicket&#8217;s component-oriented structure and its &#8220;low touch&#8221; approach to HTML is quite inviting.</p>
 
-<p>You can see these examples and many more in live action without having to install anything.</p>
+<p>You can see these examples and many more in <a href='http://wicketstuff.org/wicket14'>live action</a> without having to install anything.</p>
 
 <ul>
 <li><a href='helloworld.html'>Hello World!</a> - Everybody&#8217;s favorite example</li>
