--- a/meet/blogs.html
+++ b/meet/blogs.html
@@ -72,7 +72,7 @@
 			<a href="http://cwiki.apache.org/WICKET">Wiki</a>
 		</li>
 		<li>
-			<a href="http://cwiki.apache.org/WICKET/reference-library.html">Reference guide</a>
+			<a href="https://cwiki.apache.org/confluence/display/WICKET/Reference+library">Reference guide</a>
 		</li>
 		<li>
 			<a href="/learn/books" title="Books">Books</a>
@@ -180,7 +180,7 @@
 
 <h2 id='get_your_blog_listed'>Get your blog listed!</h2>
 
-<p>If you think your blog is missing, then please send a message to one of the core contributors or the mailinglist. In the mean time you can add your blog to our wiki&#8217;s <a href='https://cwiki.apache.org/WICKET/wicket-blogs.html'>special blog page</a>.</p>
+<p>If you think your blog is missing, then please send a message to one of the core contributors or the mailinglist. In the mean time you can add your blog to our wiki&#8217;s <a href='https://cwiki.apache.org/confluence/display/WICKET/Wicket+Blogs'>special blog page</a>.</p>
 		</div>
         <div id="clearer"></div>
 		<div id="footer"><span>
