Reverted r981037: direct linking to confluence instance is not allowed
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@984942 13f79535-47bb-0310-9956-ffa450edef68

--- a/help/index.html
+++ b/help/index.html
@@ -72,7 +72,7 @@
 			<a href="http://cwiki.apache.org/WICKET">Wiki</a>
 		</li>
 		<li>
-			<a href="https://cwiki.apache.org/confluence/display/WICKET/Reference+library">Reference guide</a>
+			<a href="http://cwiki.apache.org/WICKET/reference-library.html">Reference guide</a>
 		</li>
 		<li>
 			<a href="/learn/books" title="Books">Books</a>
@@ -194,7 +194,7 @@
 
 <h2 id='commerical_support'>Commerical Support</h2>
 
-<p>The list of companies found at <a href='https://cwiki.apache.org/confluence/display/WICKET/Companies+that+provide+services'>this wiki page</a> provide commercial services for Wicket which ranges from training courses, consultancy and even project development.</p>
+<p>The list of companies found at <a href='https://cwiki.apache.org/WICKET/companies-that-provide-services.html'>this wiki page</a> provide commercial services for Wicket which ranges from training courses, consultancy and even project development.</p>
 
 <p>Being mentioned here is not an indication of official &#8220;endorsement&#8221; by the Apache Software Foundation, but is instead provided as a public service. This list is in no way a complete listing of the many organizations providing either free or for cost support for ASF projects. If you would like to be added to this list, or removed, sign up for the wiki and add yourself to the list.</p>
 		</div>
