--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<a href="http://cwiki.apache.org/WICKET">Wiki</a>
 		</li>
 		<li>
-			<a href="https://cwiki.apache.org/confluence/display/WICKET/Reference+library">Reference guide</a>
+			<a href="http://cwiki.apache.org/WICKET/reference-library.html">Reference guide</a>
 		</li>
 		<li>
 			<a href="/learn/books" title="Books">Books</a>
@@ -164,7 +164,7 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 <h1>Wicket 1.5-M1 released</h1><p>This is the first milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and flexible request processing pipeline.</p><p>This release is NOT production-ready, it is more of a technology demo that should facilitate user-feedback we can fold into the next milestone.</p><ul>
-<li><a href='http://cwiki.apache.org/confluence/display/WICKET/Migration+to+Wicket+1.5'>Migration notes</a></li>
+<li><a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migration notes</a></li>
 
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-M1/'>Subversion tag</a></li>
 
