WICKET-2984 Wicket Quickstart not working
Replace 'mvn archetype:create' with the newer 'mvn archetype:generate'.

related-to: 
WICKET-2009 Update Quickstart to use archetype:generate goal instead of archetype:create

r943697 | gseitz | 2010-05-12 23:25:56 +0200 (Wed, 12 May 2010) | 1 line

WICKET-2009: converted archetype to the new Archetype 2.0 format



git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@985317 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -171,7 +171,7 @@
 		var  groupId = document.getElementById("groupId").value;
 		var artifactId = document.getElementById("artifactId").value;
 		var version = document.getElementById("version").value;
-		var cmd = 'mvn archetype:create -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
+		var cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
 		if (version.match(/.*SNAPSHOT/)) cmd += ' -DremoteRepositories=http://wicketstuff.org/maven/repository/';
 		document.getElementById("cmdLine").value = cmd;
 	}
