New post announcing Martin Grigorov as a committer
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@988492 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -289,6 +289,12 @@
 
 
 <li>
+	<a href='/2010/08/04/martin-grigorov-committer.html'>Martin Grigorov is a Wicket team member</a> - <span>04 Aug 2010</span><br />
+	The Apache Wicket team is proud to have Martin Grigorov as a new member to the team of developers. Martin has provided many high quality...
+	<a href='/2010/08/04/martin-grigorov-committer.html'>more</a></li>
+
+
+<li>
 	<a href='/2010/05/24/wicket-1.4.9-released.html'>Wicket 1.4.9 released</a> - <span>24 May 2010</span><br />
 	This is the ninth maintenance release of the 1.4.x series and brings over fifteen bug fixes and improvements. Subversion tag Changelog To use in Maven:...
 	<a href='/2010/05/24/wicket-1.4.9-released.html'>more</a></li>
@@ -340,12 +346,6 @@
 	<a href='/2009/08/21/wicket-1.4.1-released.html'>Wicket 1.4.1 released</a> - <span>21 Aug 2009</span><br />
 	The Apache Wicket project is proud to announce the first maintenance release of Apache Wicket 1.4. Download Apache Wicket 1.4 You can download the release...
 	<a href='/2009/08/21/wicket-1.4.1-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2009/07/30/wicket-1.4-takes-typesafety-to-the-next-level.html'>Apache Wicket 1.4 takes typesafety to the next level</a> - <span>30 Jul 2009</span><br />
-	The Apache Wicket project is proud to announce the release of Apache Wicket 1.4. Apache Wicket is an open source, component oriented Java web application...
-	<a href='/2009/07/30/wicket-1.4-takes-typesafety-to-the-next-level.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
