Maded blog headers linkable to their respective posts
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@988502 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -163,7 +163,11 @@
 </ul>
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
-<h1>Peter Ertl is a Wicket team member</h1><p>The Apache Wicket team is proud to have Peter Ertl as a new member to the team of developers. Peter has been active in our community for a long time now and has contributed many patches, reported many bugs as well as helping out on the user list.</p><p>Welcome Peter!</p><h1>Wicket 1.5-M1 released</h1><p>This is the first milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and flexible request processing pipeline.</p><p>This release is NOT production-ready, it is more of a technology demo that should facilitate user-feedback we can fold into the next milestone.</p><ul>
+
+<h1 id='peter_ertl_is_a_wicket_team_member'><a href='/2010/08/24/peter-ertl-committer.html'>Peter Ertl is a Wicket team member</a></h1>
+<p>The Apache Wicket team is proud to have Peter Ertl as a new member to the team of developers. Peter has been active in our community for a long time now and has contributed many patches, reported many bugs as well as helping out on the user list.</p><p>Welcome Peter!</p>
+<h1 id='wicket_15m1_released'><a href='/2010/08/11/wicket-1.5-M1-released.html'>Wicket 1.5-M1 released</a></h1>
+<p>This is the first milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and flexible request processing pipeline.</p><p>This release is NOT production-ready, it is more of a technology demo that should facilitate user-feedback we can fold into the next milestone.</p><ul>
 <li><a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migration notes</a></li>
 
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-M1/'>Subversion tag</a></li>
