add 1.4.12 to quickstart site generator
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@999746 13f79535-47bb-0310-9956-ffa450edef68

--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -197,6 +197,10 @@
 		
 
 		
+			<option selected='selected' value='1.4.12'>1.4.12</option>
+		
+
+		
 			<option value='1.4.11'>1.4.11</option>
 		
 
