--- a/contribute/patch.html
+++ b/contribute/patch.html
@@ -165,7 +165,7 @@
 
 <li>Create the patch:</li>
 </ul>
-<div class='highlight'><pre><code class='console'><span class='go'>svn add &lt;any_files_you_created&gt;</span>
+<div class='highlight'><pre><code class='console'><span class='go'>svn add any_files_you_created</span>
 <span class='go'>svn diff &gt; /tmp/fix-WICKET-NNNN.patch</span>
 </code></pre>
 </div>
