site announcement for 1.5-M3 release
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1032206 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='wicket_15m3_released'><a href='/2010/11/05/wicket-1.5-M3-released.html'>Wicket 1.5-M3 released</a></h1>
+<p>This is another milestone release from trunk (in-development branch). This release includes several enhancments and fixes, which can be seen in the changelog (linked below).</p><ul>
+<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-M3'>Subversion tag</a></li>
+
+<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;styleName=Html&amp;version=12315329'>Changelog</a></li>
+
+<li>To use in Maven:</li>
+</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
+    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
+    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
+    <span class='nt'>&lt;version&gt;</span>1.5-M3<span class='nt'>&lt;/version&gt;</span>
+<span class='nt'>&lt;/dependency&gt;</span>
+</code></pre>
+</div><ul>
+<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-M3'>full distribution</a> (including source)</li>
+</ul>
 <h1 id='wicket_1413_released'><a href='/2010/11/01/wicket-1.4.13-released.html'>Wicket 1.4.13 released</a></h1>
 <p>This is thirteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.13'>Subversion tag</a></li>
@@ -179,23 +195,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.13'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_15m21_released'><a href='/2010/09/17/wicket.1.5-M2.1-released.html'>Wicket 1.5-M2.1 released</a></h1>
-<p>This is the second milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and flexible request processing pipeline.</p><p>This release is NOT production-ready, it is more of a technology demo that should facilitate user-feedback we can fold into the next milestone.</p><p>New and noteworthy items in this milestone include <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html#MigrationtoWicket1.5-Intercomponentevents'>Inter-component event mechanism</a> which allows components to communicate in a decoupled fashion, and improved <a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html#MigrationtoWicket1.5-getResourceSettings%2528%2529.setAddLastModifiedTimeToResourceReferenceUrl%2528%2529hasbeenreplaced'>resource caching</a>.</p><ul>
-<li><a href='https://cwiki.apache.org/WICKET/migration-to-wicket-15.html'>Migration notes</a></li>
-
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-M2.1'>Subversion tag</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.5-M2.1<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-M2.1'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2010/09/17/wicket.1.5-M2.1-released.html'>Wicket 1.5-M2.1 released</a> - <span>17 Sep 2010</span><br />
+	This is the second milestone of the new 1.5.x Wicket series. The focus of 1.5.x is to provide our users with a more powerful and...
+	<a href='/2010/09/17/wicket.1.5-M2.1-released.html'>more</a></li>
 
 
 <li>
@@ -250,12 +256,6 @@
 	<a href='/2010/03/05/wicket-1.4.7-released.html'>Wicket 1.4.7 released</a> - <span>05 Mar 2010</span><br />
 	The Apache Wicket project is proud to announce the seventh maintenance release of Apache Wicket 1.4. This releases brings over 30 improvements and bug fixes....
 	<a href='/2010/03/05/wicket-1.4.7-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/02/01/wicket-1.4.6-released.html'>Wicket 1.4.6 released</a> - <span>01 Feb 2010</span><br />
-	The Apache Wicket project is proud to announce the sixths maintenance release of Apache Wicket 1.4. This releases brings over 40 improvements and bug fixes...
-	<a href='/2010/02/01/wicket-1.4.6-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
