--- a/meet/features.html
+++ b/meet/features.html
@@ -168,6 +168,10 @@
 
 <p>Wicket supports configurable page version management. When users submit a form or follow a link from a page they accessed with the back button in their browser, Wicket is able to revert the page object to the state it was in when the page was originally rendered. This means you can write web applications that support the back button with very little work.</p>
 
+<h2 id='multitab_and_multiwindow_support'>Multi-tab and multi-window support</h2>
+
+<p>Wicket provides an easy way to write application that supports multi-window and multi-tab usage allowing developer to react properly when users open new browser window or tab</p>
+
 <h2 id='reusable_components'>Reusable Components</h2>
 
 <p>Reusable components in Wicket are particularly easy to create. Not only can you extend existing components with the Java extends keyword, but you can also create Panel components which associate a group of components as a reusable unit.</p>
