--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -171,7 +171,12 @@
 		var groupId = document.getElementById("groupId").value;
 		var artifactId = document.getElementById("artifactId").value;
 		var version = document.getElementById("version").value;
-		var cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
+		var cmd;
+		if(version.match(/^1\.[34]/))
+			cmd = 'mvn archetype:create -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
+		else
+			cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
+
 		if (version.match(/.*SNAPSHOT/)) cmd += ' -DremoteRepositories=http://wicketstuff.org/maven/repository/';
 		document.getElementById("cmdLine").value = cmd;
 	}
