Pedro Santos committership announcement
git-svn-id: https://svn.apache.org/repos/asf/wicket/common/site/trunk/_site@1038018 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 
 <p>Wicket is released under the <a href='http://www.apache.org/licenses/LICENSE-2.0.html'>Apache License, Version 2.0</a>.</p>
 
+<h1 id='pedro_santos_is_a_wicket_team_member'><a href='/2010/11/21/pedro-santos-committer.html'>Pedro Santos is a Wicket team member</a></h1>
+<p>Pedro Santos has been added as a committer and PMC member for Apache Wicket. Pedro has been increasingly active in the Wicket community in recent months, and his patches continue to improve in quality. Additionally, Pedro is always willing to do the &#8220;grunt work&#8221; of creating great test cases for his patches, or for JIRA issues that others have attached patches to. Test cases are invaluable to the development of Wicket because they help us not introduce regressions as we fix bugs and add features.</p><p>Thanks Pedro, and we look forward to working with you!</p>
 <h1 id='wicket_15m3_released'><a href='/2010/11/05/wicket-1.5-M3-released.html'>Wicket 1.5-M3 released</a></h1>
 <p>This is another milestone release from trunk (in-development branch). This release includes several enhancments and fixes, which can be seen in the changelog (linked below).</p><ul>
 <li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.5-M3'>Subversion tag</a></li>
@@ -179,23 +181,13 @@
 </code></pre>
 </div><ul>
 <li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.5-M3'>full distribution</a> (including source)</li>
-</ul>
-<h1 id='wicket_1413_released'><a href='/2010/11/01/wicket-1.4.13-released.html'>Wicket 1.4.13 released</a></h1>
-<p>This is thirteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch.</p><ul>
-<li><a href='http://svn.apache.org/repos/asf/wicket/releases/wicket-1.4.13'>Subversion tag</a></li>
-
-<li><a href='https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12310561&amp;styleName=Html&amp;version=12315330'>Changelog</a></li>
-
-<li>To use in Maven:</li>
-</ul><div class='highlight'><pre><code class='xml'><span class='nt'>&lt;dependency&gt;</span>
-    <span class='nt'>&lt;groupId&gt;</span>org.apache.wicket<span class='nt'>&lt;/groupId&gt;</span>
-    <span class='nt'>&lt;artifactId&gt;</span>wicket<span class='nt'>&lt;/artifactId&gt;</span>
-    <span class='nt'>&lt;version&gt;</span>1.4.13<span class='nt'>&lt;/version&gt;</span>
-<span class='nt'>&lt;/dependency&gt;</span>
-</code></pre>
-</div><ul>
-<li>Download the <a href='http://www.apache.org/dyn/closer.cgi/wicket/1.4.13'>full distribution</a> (including source)</li>
 </ul><h1>Older news items</h1><ul>
+
+
+<li>
+	<a href='/2010/11/01/wicket-1.4.13-released.html'>Wicket 1.4.13 released</a> - <span>01 Nov 2010</span><br />
+	This is thirteenth release of the Wicket 1.4.x series. This is primarily a minor bugfix release on the 1.4.x (stable) branch. Subversion tag Changelog To...
+	<a href='/2010/11/01/wicket-1.4.13-released.html'>more</a></li>
 
 
 <li>
@@ -250,12 +242,6 @@
 	<a href='/2010/05/03/wicket-1.4.8-released.html'>Wicket 1.4.8 released</a> - <span>03 May 2010</span><br />
 	Wicket 1.4.8 is released! This is the eighth maintenance release of 1.4.x series and brings over 20 bug fixes and improvements. SVN tag Using Maven:...
 	<a href='/2010/05/03/wicket-1.4.8-released.html'>more</a></li>
-
-
-<li>
-	<a href='/2010/03/05/wicket-1.4.7-released.html'>Wicket 1.4.7 released</a> - <span>05 Mar 2010</span><br />
-	The Apache Wicket project is proud to announce the seventh maintenance release of Apache Wicket 1.4. This releases brings over 30 improvements and bug fixes....
-	<a href='/2010/03/05/wicket-1.4.7-released.html'>more</a></li>
 
 </ul>
 <h1 id='books_about_wicket'>Books about Wicket</h1>
