--- a/start/quickstart.html
+++ b/start/quickstart.html
@@ -177,7 +177,8 @@
 		else
 			cmd = 'mvn archetype:generate -DarchetypeGroupId=org.apache.wicket -DarchetypeArtifactId=wicket-archetype-quickstart -DarchetypeVersion=' + version + ' -DgroupId=' + groupId + ' -DartifactId=' + artifactId;						
 
-		if (version.match(/.*SNAPSHOT/)) cmd += ' -DremoteRepositories=http://wicketstuff.org/maven/repository/';
+		if (version.match(/.*SNAPSHOT/)) cmd += ' -DarchetypeRepository=http://wicketstuff.org/maven/repository/'; 
+		cmd += ' -DinteractiveMode=false'; 
 		document.getElementById("cmdLine").value = cmd;
 	}
 </script><div id='mvncmd'>
